# storage/api-docs/api-docs.yaml
@@ -802,6 +802,11 @@ paths:
           schema:
             type: integer
             example: 500
+        - name: "distance"
+          in: query
+          schema:
+            type: integer
+            example: 500
         - name: "order_title"
           in: query
           schema:
